--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,11 @@
 			<version>3.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.21</version>
+		</dependency>
+		<dependency>
 			<groupId>wechat4j</groupId>
 			<artifactId>wechat4j</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
