--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,14 +48,14 @@
   </filter-mapping> -->
   
   <!-- 用户filter -->
-  <!-- <filter>
+ <filter>
   	<filter-name>SecurityServlet</filter-name>
-  	<filter-class>com.cfang.fund.filter.SecurityServlet</filter-class>
+  	<filter-class>com.cfang.WeChat.filter.SecurityServlet</filter-class>
   </filter>
   <filter-mapping>
   	<filter-name>SecurityServlet</filter-name>
   	<url-pattern>/*</url-pattern>
-  </filter-mapping> -->
+  </filter-mapping>
   
   <!-- 配置过滤器，同时转码所有请求为utf-8编码,解决乱码问题 -->
   <filter>
@@ -94,6 +94,10 @@
     <error-code>500</error-code>
     <location>/WEB-INF/jsp/error/500.jsp</location>
   </error-page>
+  <error-page>  
+    <exception-type>java.lang.Throwable</exception-type>  
+    <location>/WEB-INF/jsp/error/500.jsp</location>  
+</error-page>
   
   <!-- session超时时间 -->
   <session-config>
