--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -8,4 +8,6 @@ jdbc.url=jdbc:mysql://localhost:3306/WeChat?useUnicode=true&amp;characterEncodin
 hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
 hibernate.memcached.cacheTimeSeconds=300
 #hibernate缓存配置
-#memcached.servers=
+#hibernate.cache.provider_class=com.googlecode.hibernate.memcached.MemcachedCacheProvider
+#memcached.servers=localhost:11211
+#hibernate.cache.region_prefix=quality.cache.ehcache
