--- a/src/main/resources/memcache.properties
+++ b/src/main/resources/memcache.properties
@@ -1,7 +1,18 @@
-mcache.server=127.0.0.1\:11211
+#缓存服务器
+memcache.server=127.0.0.1:11211
+#session服务器
+memcache.session=127.0.0.1:11211
+#初始连接数
 memcache.initConn=20
+#最小连接数
 memcache.minConn=10
+#最大连接数
 memcache.maxConn=50
+#设置连接池维护线程的睡眠时间
 memcache.maintSleep=3000
+#设置是否使用Nagle算法（Socket的参数），如果是true在写数据时不缓冲，立即发送出去 
 memcache.nagle=false
+#设置socket的读取等待超时时间 
 memcache.socketTO=3000
+#设置连接心跳监测开关  
+memcached.aliveCheck=true 
