--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-          classpath*:applicationContext.xml
+          classpath*:applicationContext.xml,
+          classpath*:applicationContext-memcache.xml
       </param-value>
 	</context-param>
 
