--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -94,6 +94,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- sitemesh装饰器 -->
+	<filter>
+		<filter-name>sitemesh</filter-name>
+		<filter-class>org.sitemesh.config.ConfigurableSiteMeshFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>sitemesh</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<!-- 配置404、500 -->
 	<error-page>
 		<error-code>404</error-code>
@@ -133,7 +143,7 @@
 			<taglib-location>/WEB-INF/tld/sitemesh-page.tld</taglib-location>
 		</taglib>
 	</jsp-config>
-	
+
 	<!-- 解决页面中的js、css引入路径问题 -->
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
@@ -143,9 +153,13 @@
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.css</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.png</url-pattern>
+	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>/WEB-INF/jsp/login/login.jsp</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
 </web-app>
