--- a/src/main/resources/memcache.properties
+++ b/src/main/resources/memcache.properties
@@ -1,5 +1,7 @@
-#缓存服务器
+#缓存服务器1
 memcache.server=127.0.0.1:11211
+#缓存服务器2
+memcache.server2=127.0.0.1:11212
 #session服务器
 memcache.session=127.0.0.1:11211
 #初始连接数
