--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -11,3 +11,5 @@ hibernate.memcached.cacheTimeSeconds=300
 #hibernate.cache.provider_class=com.googlecode.hibernate.memcached.MemcachedCacheProvider
 #memcached.servers=localhost:11211
 #hibernate.cache.region_prefix=quality.cache.ehcache
+#jndi.masterdb=WECHAT/wechatdb
+#jndi.salvedb=WECHAT/wechatdb
